--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
-.container {
-    margin: 60px;
-    width: auto;
-}
+#container {
+     /* تصغير العرض إلى 80% من عرض الشاشة */
+    max-width: 600px; /* أقصى عرض */
+    height: auto; /* الطول يعتمد على المحتوى */
+    margin: 0 auto; /* توسيط العنصر أفقيًا */
+    padding: 20px; /* إضافة مسافة داخلية */
+    background-color: #f8f9fa; /* لون خلفية خفيف */
+    border: 1px solid #ddd; /* إطار خفيف */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* ظل خفيف لجعل التصميم جذابًا */
+  }
+  
+
+#ordersContainer {
+    width: 80%;
+    padding: 10px;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+  }
+  
