--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
-.container {
-    margin: 60px;
-    width: auto;
+
+#container {
+    max-width: 600px;
+    height: auto;
+    margin: 0 auto; 
+    padding: 20px; 
+    background-color: #f8f9fa;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+#ordersContainer {
+    width: 80%;
+    padding: 10px;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+}
+#divCard {
+    border: 2px solid #d3d3d3;
+    border-radius: 6px;
+    box-shadow: 2px 0 6px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+}
+.img-fluid {
+    margin: auto;
 }
